--- a/picasso/server/templates/camera.html
+++ b/picasso/server/templates/camera.html
@@ -1,22 +1,100 @@
 <!DOCTYPE html>
-<html>
-    <head>
-    <title>Camera capture</title>
-    <script>
-        var localStream;
-        var localStreamObjUrl;
-        window.onload = function() {
-            navigator.webkitGetUserMedia("audio, video", gotStream);
-        }
-        function gotStream(stream) {
-            localStream = stream;
-            localStreamObjUrl = webkitURL.createObjectURL(localStream);
-            var video = document.getElementById("selfView");
-            video.src = localStreamObjUrl;
-        }
-    </script>
-</head>
-<body>
-    <video id="selfView" autoplay audio=muted></video>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<input type="file" accept="image/*;capture=camera" />
+		<input type="file" accept="video/*;capture=camcorder" />
+		<input type="file" accept="audio/*;capture=microphone" />
+
+		<video autoplay></video>
+		<script>
+			function hasGetUserMedia() {
+				return !!(
+					navigator.mediaDevices && navigator.mediaDevices.getUserMedia
+				);
+			}
+
+			if (hasGetUserMedia()) {
+				// Good to go!
+			} else {
+				alert('getUserMedia() is not supported by your browser');
+			}
+
+			const constraints = {
+				video: true,
+			};
+
+			const video = document.querySelector('video');
+
+			navigator.mediaDevices.getUserMedia(constraints).then((stream) => {
+				video.srcObject = stream;
+			});
+
+			const videoElement = document.querySelector('video');
+			const audioSelect = document.querySelector('select#audioSource');
+			const videoSelect = document.querySelector('select#videoSource');
+
+			navigator.mediaDevices
+				.enumerateDevices()
+				.then(gotDevices)
+				.then(getStream)
+				.catch(handleError);
+
+			audioSelect.onchange = getStream;
+			videoSelect.onchange = getStream;
+
+			function gotDevices(deviceInfos) {
+				for (let i = 0; i !== deviceInfos.length; ++i) {
+					const deviceInfo = deviceInfos[i];
+					const option = document.createElement('option');
+					option.value = deviceInfo.deviceId;
+					if (deviceInfo.kind === 'audioinput') {
+						option.text =
+							deviceInfo.label || 'microphone ' + (audioSelect.length + 1);
+						audioSelect.appendChild(option);
+					} else if (deviceInfo.kind === 'videoinput') {
+						option.text =
+							deviceInfo.label || 'camera ' + (videoSelect.length + 1);
+						videoSelect.appendChild(option);
+					} else {
+						console.log('Found another kind of device: ', deviceInfo);
+					}
+				}
+			}
+
+			function getStream() {
+				if (window.stream) {
+					window.stream.getTracks().forEach(function (track) {
+						track.stop();
+					});
+				}
+
+				const constraints = {
+					audio: {
+						deviceId: { exact: audioSelect.value },
+					},
+					video: {
+						deviceId: { exact: videoSelect.value },
+					},
+				};
+
+				navigator.mediaDevices
+					.getUserMedia(constraints)
+					.then(gotStream)
+					.catch(handleError);
+			}
+
+			function gotStream(stream) {
+				window.stream = stream; // make stream available to console
+				videoElement.srcObject = stream;
+			}
+
+			function handleError(error) {
+				console.error('Error: ', error);
+			}
+		</script>
+		<title>Camera</title>
+	</head>
+	<body></body>
 </html>
