--- a/picasso/server/templates/camera.html
+++ b/picasso/server/templates/camera.html
@@ -3,18 +3,28 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<input type="file" accept="image/*;capture=camera" />
-		<input type="file" accept="video/*;capture=camcorder" />
-		<input type="file" accept="audio/*;capture=microphone" />
 
-		<video autoplay></video>
+		<video autoplay id="video" class="center"></video>
+
+		<style>
+			#video {
+				width: 40%;
+				length: 40%;
+			}
+			.center {
+  				display: block;
+  				margin-left: auto;
+  				margin-right: auto;
+  				width: 50%;
+			}
+		</style>
+
 		<script>
 			function hasGetUserMedia() {
 				return !!(
 					navigator.mediaDevices && navigator.mediaDevices.getUserMedia
 				);
 			}
-
 			if (hasGetUserMedia()) {
 				// Good to go!
 			} else {
@@ -94,6 +104,7 @@
 				console.error('Error: ', error);
 			}
 		</script>
+
 		<title>Camera</title>
 	</head>
 	<body></body>
