Rephrasing some titles (in html)

--- a/picasso/server/templates/camera.en.html
+++ b/picasso/server/templates/camera.en.html
@@ -40,7 +40,7 @@
 					>
 						EXPLANATIONS
 					</li>
-					<li class="hvr-float" onclick="scrollto('contact');">CONTACT</li>
+					<li class="hvr-float" onclick="scrollto('contact');">CONTACT US</li>
 				</ul>
 			</div>
 		</header>
