--- a/picasso/server/templates/camera.fr.html
+++ b/picasso/server/templates/camera.fr.html
@@ -40,7 +40,7 @@
 					>
 						EXPLICATIONS
 					</li>
-					<li class="hvr-float" onclick="scrollto('contact');">CONTACT</li>
+					<li class="hvr-float" onclick="scrollto('contact');">NOUS CONTACTER</li>
 				</ul>
 			</div>
 		</header>
