--- a/picasso/server/templates/camera.en.html
+++ b/picasso/server/templates/camera.en.html
@@ -55,10 +55,12 @@
 		<section class="segmentation">
 			<div id="segmentation">
 				<h1>
-					FILM WHAT YOU WANT TO SEGMENTATE
+					FILM WHAT YOU WANT TO SEGMENT
 				</h1>
 				<div id="video">
 					<video autoplay id="video" class="center"></video>
+					<select id='audioSource' style="width: 208px;"></select>
+					<select id='videoSource' style="width: 208px;"></select>
 					<script src="{{ url_for('static', filename='js/camera.js') }}">
 					</script>
 				</div>
