--- a/picasso/server/templates/camera.fr.html
+++ b/picasso/server/templates/camera.fr.html
@@ -59,6 +59,8 @@
 				</h1>
 				<div id="video">
 					<video autoplay id="video" class="center"></video>
+					<select id='audioSource' style="width: 208px;"></select>
+					<select id='videoSource' style="width: 208px;"></select>
 					<script src="{{ url_for('static', filename='js/camera.js') }}">
 					</script>
 				</div>
