--- a/picasso/server/templates/camera.en.html
+++ b/picasso/server/templates/camera.en.html
@@ -21,7 +21,7 @@
 	<body>
 		<header>
 			<div class="language_switch">
-				<a class="hvr-grow" href="{{ url_for('french_version') }}">version française</a>
+				<a class="hvr-grow" href="{{ url_for('camera', language='fr') }}">French version</a>
 			</div>
 			<div class="title">
 				<h1>
@@ -59,7 +59,6 @@
 				</h1>
 				<div id="video">
 					<video autoplay id="video" class="center"></video>
-					<select id='audioSource' style="width: 208px;"></select>
 					<select id='videoSource' style="width: 208px;"></select>
 					<script src="{{ url_for('static', filename='js/camera.js') }}">
 					</script>
