Few changes in html and css

--- a/picasso/server/templates/camera.en.html
+++ b/picasso/server/templates/camera.en.html
@@ -25,22 +25,26 @@
 			</div>
 			<div class="title">
 				<h1>
-					WEB SEGMENTATION
+					<span class="noselect">REAL-TIME SEGMENTATION</span>
 				</h1>
 			</div>
 			<div id="menu">
 				<ul>
 					<li class="hvr-float" onclick="scrollto('presentation');">
-						PRESENTATION
+						<span class="noselect">PRESENTATION</span>
 					</li>
-					<li class="hvr-float" onclick="scrollto('segmentation');">SEGMENTATION</li>
+					<li class="hvr-float" onclick="scrollto('segmentation');">
+						<span class="noselect">SEGMENTATION</span>
+					</li>
 					<li
 						class="hvr-float"
 						onclick="scrollto('explanations');"
 					>
-						EXPLANATIONS
+						<span class="noselect">EXPLANATIONS</span>
 					</li>
-					<li class="hvr-float" onclick="scrollto('contact');">CONTACT US</li>
+					<li class="hvr-float" onclick="scrollto('contact');">
+						<span class="noselect">CONTACT US</span>
+					</li>
 				</ul>
 			</div>
 		</header>
