--- a/picasso/server/static/css/camera.css
+++ b/picasso/server/static/css/camera.css
@@ -1,3 +1,12 @@
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
+}
 #video {
     width: 60%;
     top: 200px;
@@ -115,8 +124,14 @@ footer.contact {
 
 /* tablets */
 @media screen and (max-width: 768px) {
+    header {
+        height: 250px;
+    }
 }
 
 /* mobiles */
 @media screen and (max-width: 480px) {
+    header li {
+        font-size: 13px;
+    }
 }
