Add empty documentation. Return encoded image without any changes.

--- a/picasso/server/templates/camera.en.html
+++ b/picasso/server/templates/camera.en.html
@@ -67,6 +67,10 @@
 					<select id='videoSource' style="width: 208px;"></select>
 					<script src="{{ url_for('static', filename='js/camera.js') }}"></script>
 				</div>
+				<h1>
+					SEGMENTATION RESULT
+				</h1>
+				<img src="" id="segmentedFrame"></img>
 			</div>
 		</section>
 		<section class="explanations">
