--- a/picasso/server/templates/camera.fr.html
+++ b/picasso/server/templates/camera.fr.html
@@ -69,7 +69,10 @@
 					<script src="{{ url_for('static', filename='js/camera.js') }}"></script>
 					<p><button class="capture-button">Capture video</button>
 				</div>
-
+				<h1>
+					RESULTAT DE SEGMENTATION
+				</h1>
+				<img src="" id="segmentedFrame"></img>
 			</div>
 		</section>
 		<section class="explanations">
