--- a/picasso/server/templates/camera.en.html
+++ b/picasso/server/templates/camera.en.html
@@ -86,7 +86,7 @@
 					GET IN TOUCH WITH US
 				</h1>
 				<div class="links">
-					<a href="https://github.com/raphaellndr" target="blank_">
+					<a href="https://github.com/etiennelndr/picasso" target="blank_">
 						<i class="fab fa-github-square"> </i
 					></a>
 					<a
